reverting static/fixed header change on mobile sizes

--- a/wp-content/themes/point-church/sass/_header.scss
+++ b/wp-content/themes/point-church/sass/_header.scss
@@ -144,6 +144,7 @@ nav.off-canvas{ display: none; }
 		text-align: center;
 		background: #333!important;
 		padding: 0;
+		position: static;
 
 		h1{ float: none; margin: 1em auto; }
 		nav.on-canvas{
